# jules_c_game

./: CMakeLists.txt  README.md
include/: Asteroid.h  Bullet.h  Game.h  GameObject.h  Player.h  TextRenderer.h  Vector2D.h
src/: Asteroid.cpp  Bullet.cpp  Game.cpp  GameObject.cpp  Player.cpp  TextRenderer.cpp  main.cpp
